RESOLVED FIXED 102715
[CSS Exclusions] shape-inside does not properly handle padding or border
https://bugs.webkit.org/show_bug.cgi?id=102715
Summary [CSS Exclusions] shape-inside does not properly handle padding or border
Bem Jones-Bey
Reported 2012-11-19 14:42:40 PST
Created attachment 175043 [details] Examples of the bug When an element with shape-inside has padding, and the shape has coordinates other than 0, 0, the padding is ignored. When the x coordinate differs from zero, the left padding is ignored. When the y coordinate differs from zero, the top padding is ignored. See the attachment for examples.
Attachments
Examples of the bug (3.26 KB, text/html)
2012-11-19 14:42 PST, Bem Jones-Bey
no flags
Implementing correct box-sizing behavior (18.31 KB, patch)
2013-02-01 13:26 PST, Bear Travis
no flags
Merging with mainline (18.33 KB, patch)
2013-02-07 10:56 PST, Bear Travis
no flags
Bem Jones-Bey
Comment 1 2012-11-19 15:30:35 PST
I just noticed that it doesn't just ignore the padding, it ignores the border as well. If you need an example, I can compose one, but it is simple to see just by playing with the border widths on the original example.
Bear Travis
Comment 2 2013-02-01 13:26:36 PST
Created attachment 186123 [details] Implementing correct box-sizing behavior Accounting for the offsets from the border box based on the box-sizing css property value.
Bear Travis
Comment 3 2013-02-07 10:56:24 PST
Created attachment 187135 [details] Merging with mainline
Dave Hyatt
Comment 4 2013-02-07 12:00:14 PST
Comment on attachment 187135 [details] Merging with mainline r=me
WebKit Review Bot
Comment 5 2013-02-07 12:51:58 PST
Comment on attachment 187135 [details] Merging with mainline Clearing flags on attachment: 187135 Committed r142164: <http://trac.webkit.org/changeset/142164>
WebKit Review Bot
Comment 6 2013-02-07 12:52:02 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.