Source/WebCore/rendering/ExclusionShapeInfo.cpp
@@ -49,7 +49,7 @@ const ExclusionShape* ExclusionShapeInfo<RenderType, shapeGetter>::computedShape
 
     ASSERT(shape);
 
-    m_shape = ExclusionShape::createExclusionShape(shape, m_logicalWidth, m_logicalHeight, m_renderer->style()->writingMode());
+    m_shape = ExclusionShape::createExclusionShape(shape, m_shapeLogicalWidth, m_shapeLogicalHeight, m_renderer->style()->writingMode());
     ASSERT(m_shape);
     return m_shape.get();
 }
